@@ -1,3 +1,8 @@
+2023-12-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-ast.c (pkl_ast_handle_bconc_ass_stmt): Add location
+	info to synthesized BCONC assignment statements.
+
 2023-12-28  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pkl-trans.c (pkl_trans1_ps_asm_stmt): Add location info
